infra/manifests/aws/k8s/deploy/client.tpl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goat-client
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goat-client
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: goat-client
    spec:
      containers:
        - image: ${DOCKER_IMAGE}
          imagePullPolicy: IfNotPresent
          name: goat-client
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 500Mi
              cpu: 200m
            limits:
              memory: 1Gi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: goat-client
  namespace: ${NAMESPACE}
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: goat-client
